--- a/src/components/HorseSummaryBar.css
+++ b/src/components/HorseSummaryBar.css
@@ -842,7 +842,7 @@
 .horse-summary-bar__value-label-wrapper {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   min-width: 0; /* Allow flex item to shrink */
 }
 
